commit: customer, hotel, payment, reservation services with k8s